--- a/index.css
+++ b/index.css
@@ -128,6 +128,7 @@ body{
         margin-left: 60px;
         margin-right: 60px;
         margin-top: 250px;
+        margin-bottom: 200px;
     }
     .master input{
         border: 2px solid white;
